--- a/firefly-iii-2.0.0-v2.yaml
+++ b/firefly-iii-2.0.0-v2.yaml
@@ -5,7 +5,7 @@ servers:
 info:
   title: Firefly III API v2.0.0
   description: |
-    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-12T05:29:00+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2023-02-12T05:36:59+00:00
   version: "2.0.0"
   contact:
     name: James Cole
@@ -453,59 +453,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionSumArray'
-  /v2/budgets:
-    get:
-      summary: List all budgets.
-      description: List all the budgets the user has made.
-      operationId: listBudgets
-      tags:
-        - budgets
-      parameters:
-        - name: X-Trace-Id
-          in: header
-          description: Unique identifier associated with this request.
-          required: false
-          schema:
-            type: string
-            format: uuid
-        - in: query
-          name: page
-          description: Page number. The default pagination is 50.
-          required: false
-          schema:
-            type: integer
-            example: 1
-      responses:
-        200:
-          description: A list of budgets.
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/BudgetV2Array'
-        401:
-          description: Unauthenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Unauthenticated'
-        404:
-          description: Page not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/NotFound'
-        400:
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BadRequest'
-        500:
-          description: Internal exception
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/InternalException'
   /v2/budgets/{id}/budgeted:
     get:
       tags:
@@ -575,6 +522,129 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TransactionSumArray'
+  /v2/budgets:
+    get:
+      summary: List all budgets.
+      description: List all the budgets the user has made.
+      operationId: listBudgets
+      tags:
+        - budgets
+      parameters:
+        - name: X-Trace-Id
+          in: header
+          description: Unique identifier associated with this request.
+          required: false
+          schema:
+            type: string
+            format: uuid
+        - in: query
+          name: page
+          description: Page number. The default pagination is 50.
+          required: false
+          schema:
+            type: integer
+            example: 1
+      responses:
+        200:
+          description: A list of budgets.
+          content:
+            application/vnd.api+json:
+              schema:
+                $ref: '#/components/schemas/BudgetV2Array'
+        401:
+          description: Unauthenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthenticated'
+        404:
+          description: Page not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        500:
+          description: Internal exception
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalException'
+  /v2/budgets/{id}/limits:
+    get:
+      operationId: listBudgetLimitByBudget
+      description: |
+        Get all budget limits for this budget.
+      summary: Get all limits for a budget.
+      tags:
+        - budgets
+      parameters:
+        - name: X-Trace-Id
+          in: header
+          description: Unique identifier associated with this request.
+          required: false
+          schema:
+            type: string
+            format: uuid
+        - in: query
+          name: start
+          description: |
+            A date formatted YYYY-MM-DD.
+          required: true
+          schema:
+            type: string
+            format: date
+        - in: query
+          name: end
+          description: |
+            A date formatted YYYY-MM-DD.
+          required: true
+          schema:
+            type: string
+            format: date
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            example: "123"
+          description: The ID of the requested budget.
+      responses:
+        200:
+          description: A list of budget limits applicable to this budget.
+          content:
+            application/vnd.api+json:
+              schema:
+                $ref: '#/components/schemas/BudgetLimitV2Array'
+        401:
+          description: Unauthenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthenticated'
+        404:
+          description: Page not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        500:
+          description: Internal exception
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalException'
 components:
   schemas:
     TransactionSum:
@@ -731,6 +801,106 @@ components:
           format: string
           example: "value"
           description: "The key is the label of the value, so for example: '2018-01-01' => 13 or 'Groceries' => -123."
+    BudgetLimitV2:
+      type: object
+      required:
+        - amount
+        - start
+        - end
+        - budget_id
+      properties:
+        created_at:
+          type: string
+          format: date-time
+          example: "2018-09-17T12:46:47+01:00"
+          readOnly: true
+        updated_at:
+          type: string
+          format: date-time
+          example: "2018-09-17T12:46:47+01:00"
+          readOnly: true
+        start:
+          type: string
+          format: date-time
+          example: "2018-09-17T12:46:47+01:00"
+          description: Start date of the budget limit.
+        end:
+          type: string
+          format: date-time
+          example: "2018-09-17T12:46:47+01:00"
+          description: End date of the budget limit.
+        currency_id:
+          type: string
+          format: string
+          example: "5"
+          description: Use either currency_id or currency_code. Defaults to the user's default currency.
+        currency_code:
+          type: string
+          format: string
+          example: EUR
+          description: Use either currency_id or currency_code. Defaults to the user's default currency.
+        currency_name:
+          type: string
+          format: string
+          example: "Euro"
+          readOnly: true
+        currency_symbol:
+          type: string
+          format: string
+          example: "$"
+          readOnly: true
+        currency_decimal_places:
+          type: integer
+          format: int32
+          example: 2
+          readOnly: true
+        budget_id:
+          type: string
+          format: string
+          example: "23"
+          description: The budget ID of the associated budget.
+          readOnly: true
+        period:
+          type: string
+          format: string
+          example: "monthly"
+          nullable: true
+          readOnly: true
+          description: Period of the budget limit. Only used when auto-generated by auto-budget.
+        amount:
+          type: string
+          format: amount
+          example: "123.45"
+    BudgetLimitV2Array:
+      type: object
+      required:
+        - data
+        - meta
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/BudgetLimitV2Read'
+        meta:
+          $ref: '#/components/schemas/Meta'
+    BudgetLimitReadV2:
+      type: object
+      required:
+        - type
+        - id
+        - attributes
+      properties:
+        type:
+          type: string
+          format: string
+          example: "budget_limits"
+          description: "Immutable value"
+        id:
+          type: string
+          format: string
+          example: "2"
+        attributes:
+          $ref: '#/components/schemas/BudgetLimitV2'
     BudgetV2Read:
       type: object
       required:
